demokubernets/Deployment/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: realtimeapp
  labels:
    app: realtime
spec:
  selector:
    matchLabels:
      app: realtime
  replicas: 5
  template:
    metadata:
      labels:
        app: realtime
    spec:
      containers:
      - name: realtimeapp
        image: gbaeke/fluxapp:1.0.2
        resources:
          requests:
            cpu: 25m
            memory: 50Mi
          limits:
            cpu: 150m
            memory: 150Mi
        ports:
        - containerPort: 8080
  strategy:
    canary:
      stableService: realtimeapp-stable
      canaryService: realtimeapp-canary
      #trafficRouting:
        #nginx:
          #stableIngress: realtimeapp-ingress
      steps:
      - setWeight: 50
      - pause: {}
